--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -73,10 +74,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: OpenSans Regular
+       fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf
+
+     - family: OpenSans Bold
+       fonts:
+        - asset: assets/fonts/OpenSans-Bold.ttf
+
+     - family: OpenSans Italic
+       fonts:
+        - asset: assets/fonts/OpenSans-Italic.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
