--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,14 @@ dependencies:
   provider: ^6.1.5
   equatable: ^2.0.5
   dartz: ^0.10.1
-
+  dio: ^5.9.0
+  dio_smart_retry: ^7.0.1
+  pretty_dio_logger: ^1.4.0
+  connectivity_plus: ^7.0.0
+  flutter_secure_storage: ^10.0.0
+    # State Management
+  flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
